syntax = "proto3";

package user;

option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "example.urlshortner.user.grpc";

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  bool is_deleted = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

service UserService {
  rpc createUser(CreateUserRequest) returns (User);
  rpc userLogin(LoginRequest) returns (LoginResponse);
}
